test/FAIL/assertcmd/invalid_arguments/11_test_assert.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="invalid arguments"
#-------

assert word 0x12 $0x12